# SandboxRunner

./: .clang-format  .clangd  .dockerignore  .gitignore  ABI_COMPATIBILITY_CHECKLIST.md  CMakeLists.txt  CMakePresets.json  readme.md
SandboxRunner/: CMakeLists.txt  SandboxRunner.cpp  SandboxRunner.h
SandboxRunnerCore/: CMakeLists.txt  InternalHelpers.cpp  InternalHelpers.h  Logger.cpp  Logger.h  Sandbox.cpp  Sandbox.h  SandboxUtils.cpp  SandboxUtils.h
SandboxRunnerCore/Linux/: ErrorHandler.cpp  ErrorHandler.h  LinuxSandboxImpl.cpp  SandboxChildProcess.cpp  SandboxChildProcess.h  SandboxImpl.h  SandboxMonitor.cpp  SandboxMonitor.h  SecurePolicy.cpp  SecurePolicy.h
SandboxRunnerCore/Policy/: PolicyRegistry.cpp  PolicyRegistry.h  ResourceConfig.cpp  ResourceConfig.h  SandboxPolicy.h
Tests/: AbiCompatibilityTest.cpp  CMakeLists.txt  CXX_PROGRAM.json  PolicyRegistryTest.cpp  ResourceConfigTest.cpp  SandboxRunnerCliTest.cpp  SandboxTest.cpp  SandboxTest.h  SanitizerSandboxTest.cpp
Tests/PInvokeSmoke/: Program.cs
Tests/Samples/: CMakeLists.txt  ExpectedAccepted.cpp  ExpectedCpuTimeout.cpp  ExpectedKilledBySecomp.cpp  ExpectedMemoryLimitExceeded.cpp  ExpectedOutputLimitExceeded.cpp  ExpectedProcessLimitExceeded.cpp  ExpectedRuntimeError.cpp  ExpectedStackOverflow.cpp  ExpectedTimeout.cpp  sample_generator.py
Tests/Samples/TestData/: test_data.in
Tests/SanitizerSamples/: CMakeLists.txt
docker/: jammy-release.Dockerfile
policies/: CXX_PROGRAM.json
scripts/: export-jammy-release.ps1
